wip: invoke submission
